Fix image corners on mobile

--- a/src/components/Post/PostBody.scss
+++ b/src/components/Post/PostBody.scss
@@ -110,6 +110,9 @@ div, article {
   img, video {
     padding: 0;
     border-radius: $border-radius;
+    @include mobile {
+      border-radius: 0;
+    }
   }
 
   code {
